<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font_type="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <net.wrappy.im.helper.layout.AppTextView
        style="@style/AppText02"
        font_type="light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/check_email_passcode" />

    <net.wrappy.im.helper.layout.AppEditTextView
        style="@style/AppText02"
        font_type="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:inputType="number"
        android:letterSpacing="1.5"
        android:maxLength="6"
        android:textSize="25sp" />

    <net.wrappy.im.helper.layout.AppButton
        android:id="@+id/btnForgetPasswordCheckEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/regbtn_states"
        android:gravity="center"
        android:text="@string/action_done"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <net.wrappy.im.helper.layout.AppTextView
        style="@style/AppText02"
        font_type="light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/send_again" />
</LinearLayout>