<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <net.wrappy.im.helper.layout.AppTextView
        style="@style/AppText_Default_Light"
        font_type="light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/vertify_title_noti"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusableInTouchMode="true"
        android:layout_gravity="center_horizontal">
        <net.wrappy.im.helper.layout.AppEditTextView
            android:id="@+id/edVerifyPhone"
            style="@style/AppText_Default_Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:textColor="#007aff"
            />
        <ImageButton
            android:id="@+id/btnVerifyChangePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/page_1"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dp"/>
    </LinearLayout>


    <net.wrappy.im.helper.layout.AppTextView
        style="@style/AppText_Default_Light"
        font_type="light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/check_email_passcode" />

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/txt_pin_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:inputType="number"
        android:maxLength="5"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:pinBackgroundDrawable="@drawable/bg_passcode"
        app:pinLineStroke="2dp"
        android:padding="20dp"
        app:pinLineStrokeSelected="4dp"
        app:pinTextBottomPadding="10dp" />

    <net.wrappy.im.helper.layout.AppButton
        android:id="@+id/btnVerifyCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_done"
        android:layout_margin="16dp"
        style="@style/AppButton_OK"/>

    <net.wrappy.im.helper.layout.AppTextView
        android:id="@+id/btnSendCodeAgain"
        android:textColor="#444344"
        android:textSize="14sp"
        font_type="light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/send_again" />
</LinearLayout>