<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:src="@drawable/pin_pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"/>

        <net.ironrabbit.type.CustomTypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin_to_top"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:src="@drawable/pin_pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"/>

        <net.ironrabbit.type.CustomTypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_and_exit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:src="@drawable/pin_pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"/>

        <net.ironrabbit.type.CustomTypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_history"/>

    </LinearLayout>


</LinearLayout>