<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/icon_welcome_wallet" />
    </FrameLayout>

    <net.ironrabbit.type.CustomTypefaceTextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/welcome_wallet_title"
        android:textAlignment="center"
        android:textColor="@color/background_dark"
        android:textSize="22sp" />

    <net.ironrabbit.type.CustomTypefaceButton
        android:id="@+id/buttoncreatenew"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/regbtn_states"
        android:text="@string/title_create_new_wallet"
        android:textColor="#fff" />

    <net.ironrabbit.type.CustomTypefaceButton
        android:id="@+id/buttonimport"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/whitebtn_states"
        android:text="@string/import_keystore"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

</LinearLayout>