<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/spam_bottom_sheet_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:id="@+id/layout_message_spam"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center">

            <net.ironrabbit.type.CustomTypefaceTextView
                android:id="@+id/txt_message_spam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/menu_spam"/>

        </LinearLayout>

        <View
            android:background="#000"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />

        <LinearLayout
            android:id="@+id/layout_message_violence"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center">

            <net.ironrabbit.type.CustomTypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/menu_violence"/>

        </LinearLayout>

        <View
            android:background="#000"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />

        <LinearLayout
            android:id="@+id/layout_message_cancel"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center">

            <net.ironrabbit.type.CustomTypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/menu_cancel"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>